// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdminUsers /> should render correctly - index 1`] = `
.c1 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
  width: 8rem;
  height: 2.2rem;
  margin-top: 3.34rem;
}

.c3 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
}

.c2 {
  position: absolute;
  top: 0;
  width: 13rem;
  height: 100vh;
  background-image: linear-gradient( 90deg, rgb(238,238,238), rgb(245,245,245), rgb(238,238,238) );
  background-repeat: no-repeat;
  background-size: 12.5rem 100%;
  -webkit-animation: sjjMW 3.5s ease-in-out infinite;
  animation: sjjMW 3.5s ease-in-out infinite;
}

.c0 {
  display: block;
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  overflow: hidden;
  max-width: 60rem;
  padding-right: 1rem;
  padding-left: 1rem;
}

@media (prefers-color-scheme:dark) {
  .c1 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c3 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c2 {
    background-image: linear-gradient( 90deg, rgb(17,17,17), rgb(50,50,50), rgb(17,17,17) );
  }
}

@media (min-width:50.25rem) {
  .c0 {
    padding-right: 2rem;
    padding-left: 2rem;
  }
}

<div>
  <div
    aria-label="Loading"
    class="c0 page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="c3"
      style="margin-top: 1.2rem;"
    >
      <div
        class="c2"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="c3"
      style="margin-top: 1.2rem;"
    >
      <div
        class="c2"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="c3"
      style="margin-top: 1.2rem;"
    >
      <div
        class="c2"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="c3"
      style="margin-top: 1.2rem;"
    >
      <div
        class="c2"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with admin user 1`] = `
.c3 {
  margin: 0;
  font-size: 2.4rem;
  font-weight: bold;
}

.c15 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c2 {
  margin: 0;
}

.c4 {
  margin: 2.3rem 0 0 0;
  margin-top: 1.5rem;
}

.c1 {
  margin: 1.5rem 0 0 0;
}

.c0 {
  -webkit-animation: bbwGtI 0.4s ease-in-out;
  animation: bbwGtI 0.4s ease-in-out;
}

.c14 {
  width: 100%;
  color: #1e1e1e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c16 {
  margin: 0;
}

.c6 {
  position: relative;
  min-width: 5rem;
  padding: 0.43rem 1.125rem 0.32rem 1.125rem;
  -webkit-transition: filter 0.3s;
  transition: filter 0.3s;
  border: none;
  border-radius: 0.25rem;
  font-size: 1.4rem;
  font-weight: bold;
  cursor: pointer;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #0067B7;
  color: white;
}

.c6:focus-within,
.c6:focus {
  outline: none !important;
}

.c6:focus-within::after,
.c6:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid rgba(0,125,250,0.6) 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c6:focus,
.c6:hover {
  background-color: #004F8C;
  color: white;
}

.c6:active {
  background-color: #003E6F;
}

.c6:disabled {
  background-color: #cdcdd7;
  color: rgb(100,100,100);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 {
  width: 100%;
  min-width: unset;
  max-width: unset;
  padding: 0;
  height: 100%;
  overflow: scroll;
}

.c11 {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 0.35rem;
  overflow: hidden;
}

.c12 {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: calc(100% + 2rem);
  height: calc(100% + 2rem);
  margin-top: -1rem;
  margin-left: -1rem;
  background-color: white;
  background-position: center;
  background-size: cover;
}

.c13 {
  padding: 1.2rem 0.8rem 0.8rem 1.2rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c10 > *:not(:first-child) {
  margin-top: 1rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c5 > *:not(:first-child) {
  margin-left: 1rem;
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {
  .c14 {
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:focus-within::after,
  .c6:focus::after {
    border-color: rgba(0,125,250,0.6);
  }
}

@media (prefers-color-scheme:dark) {
  .c6 {
    background-color: #025CA2;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:focus,
  .c6:hover {
    background-color: #004479;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:active {
    background-color: #003965;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:disabled {
    background-color: rgb(89,89,89);
    color: darkgray;
  }
}

@media (min-width:50.25rem) {
  .c9 {
    width: 30%;
    min-width: 20rem;
    max-width: 40rem;
    padding: 2rem 1rem 2rem 0;
  }
}

@media (prefers-color-scheme:dark) {
  .c12 {
    background-color: #1e1e1e;
  }
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

<div>
  <div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <span
          class="c2"
        >
          ⇠ Admin
        </span>
      </div>
    </div>
    <div
      class="c0"
    >
      <h1
        class="c3 c4"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div
    class="c5"
  >
    <button
      class="c6 outer"
      type="button"
    >
      <span
        class="c7"
      >
        Reload users
      </span>
    </button>
    <button
      class="c6 outer"
      type="button"
    >
      <span
        class="c7"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="c8"
  >
    <div
      class="c9"
    >
      <div
        class="c10"
      >
        <div
          class="c11"
        >
          <div
            class="c12"
          />
          <div
            class=""
          >
            <div
              class="c13"
            >
              <div
                class="c14"
              >
                <h1
                  class="c15 c16"
                  id="new-+"
                >
                  New +
                </h1>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with createError 1`] = `
.c3 {
  margin: 0;
  font-size: 2.4rem;
  font-weight: bold;
}

.c15 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c2 {
  margin: 0;
}

.c4 {
  margin: 2.3rem 0 0 0;
  margin-top: 1.5rem;
}

.c1 {
  margin: 1.5rem 0 0 0;
}

.c0 {
  -webkit-animation: bbwGtI 0.4s ease-in-out;
  animation: bbwGtI 0.4s ease-in-out;
}

.c14 {
  width: 100%;
  color: #1e1e1e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c16 {
  margin: 0;
}

.c6 {
  position: relative;
  min-width: 5rem;
  padding: 0.43rem 1.125rem 0.32rem 1.125rem;
  -webkit-transition: filter 0.3s;
  transition: filter 0.3s;
  border: none;
  border-radius: 0.25rem;
  font-size: 1.4rem;
  font-weight: bold;
  cursor: pointer;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #0067B7;
  color: white;
}

.c6:focus-within,
.c6:focus {
  outline: none !important;
}

.c6:focus-within::after,
.c6:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid rgba(0,125,250,0.6) 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c6:focus,
.c6:hover {
  background-color: #004F8C;
  color: white;
}

.c6:active {
  background-color: #003E6F;
}

.c6:disabled {
  background-color: #cdcdd7;
  color: rgb(100,100,100);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 {
  width: 100%;
  min-width: unset;
  max-width: unset;
  padding: 0;
  height: 100%;
  overflow: scroll;
}

.c11 {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 0.35rem;
  overflow: hidden;
}

.c12 {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: calc(100% + 2rem);
  height: calc(100% + 2rem);
  margin-top: -1rem;
  margin-left: -1rem;
  background-color: white;
  background-position: center;
  background-size: cover;
}

.c13 {
  padding: 1.2rem 0.8rem 0.8rem 1.2rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c10 > *:not(:first-child) {
  margin-top: 1rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c5 > *:not(:first-child) {
  margin-left: 1rem;
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {
  .c14 {
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:focus-within::after,
  .c6:focus::after {
    border-color: rgba(0,125,250,0.6);
  }
}

@media (prefers-color-scheme:dark) {
  .c6 {
    background-color: #025CA2;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:focus,
  .c6:hover {
    background-color: #004479;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:active {
    background-color: #003965;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:disabled {
    background-color: rgb(89,89,89);
    color: darkgray;
  }
}

@media (min-width:50.25rem) {
  .c9 {
    width: 30%;
    min-width: 20rem;
    max-width: 40rem;
    padding: 2rem 1rem 2rem 0;
  }
}

@media (prefers-color-scheme:dark) {
  .c12 {
    background-color: #1e1e1e;
  }
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

<div>
  <div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <span
          class="c2"
        >
          ⇠ Admin
        </span>
      </div>
    </div>
    <div
      class="c0"
    >
      <h1
        class="c3 c4"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div
    class="c5"
  >
    <button
      class="c6 outer"
      type="button"
    >
      <span
        class="c7"
      >
        Reload users
      </span>
    </button>
    <button
      class="c6 outer"
      type="button"
    >
      <span
        class="c7"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="c8"
  >
    <div
      class="c9"
    >
      <div
        class="c10"
      >
        <div
          class="c11"
        >
          <div
            class="c12"
          />
          <div
            class=""
          >
            <div
              class="c13"
            >
              <div
                class="c14"
              >
                <h1
                  class="c15 c16"
                  id="new-+"
                >
                  New +
                </h1>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with creating=true 1`] = `
.c3 {
  margin: 0;
  font-size: 2.4rem;
  font-weight: bold;
}

.c15 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c2 {
  margin: 0;
}

.c4 {
  margin: 2.3rem 0 0 0;
  margin-top: 1.5rem;
}

.c1 {
  margin: 1.5rem 0 0 0;
}

.c0 {
  -webkit-animation: bbwGtI 0.4s ease-in-out;
  animation: bbwGtI 0.4s ease-in-out;
}

.c14 {
  width: 100%;
  color: #1e1e1e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c16 {
  margin: 0;
}

.c6 {
  position: relative;
  min-width: 5rem;
  padding: 0.43rem 1.125rem 0.32rem 1.125rem;
  -webkit-transition: filter 0.3s;
  transition: filter 0.3s;
  border: none;
  border-radius: 0.25rem;
  font-size: 1.4rem;
  font-weight: bold;
  cursor: pointer;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #0067B7;
  color: white;
}

.c6:focus-within,
.c6:focus {
  outline: none !important;
}

.c6:focus-within::after,
.c6:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid rgba(0,125,250,0.6) 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c6:focus,
.c6:hover {
  background-color: #004F8C;
  color: white;
}

.c6:active {
  background-color: #003E6F;
}

.c6:disabled {
  background-color: #cdcdd7;
  color: rgb(100,100,100);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 {
  width: 100%;
  min-width: unset;
  max-width: unset;
  padding: 0;
  height: 100%;
  overflow: scroll;
}

.c11 {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 0.35rem;
  overflow: hidden;
}

.c12 {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: calc(100% + 2rem);
  height: calc(100% + 2rem);
  margin-top: -1rem;
  margin-left: -1rem;
  background-color: white;
  background-position: center;
  background-size: cover;
}

.c13 {
  padding: 1.2rem 0.8rem 0.8rem 1.2rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c10 > *:not(:first-child) {
  margin-top: 1rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c5 > *:not(:first-child) {
  margin-left: 1rem;
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {
  .c14 {
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:focus-within::after,
  .c6:focus::after {
    border-color: rgba(0,125,250,0.6);
  }
}

@media (prefers-color-scheme:dark) {
  .c6 {
    background-color: #025CA2;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:focus,
  .c6:hover {
    background-color: #004479;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:active {
    background-color: #003965;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:disabled {
    background-color: rgb(89,89,89);
    color: darkgray;
  }
}

@media (min-width:50.25rem) {
  .c9 {
    width: 30%;
    min-width: 20rem;
    max-width: 40rem;
    padding: 2rem 1rem 2rem 0;
  }
}

@media (prefers-color-scheme:dark) {
  .c12 {
    background-color: #1e1e1e;
  }
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

<div>
  <div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <span
          class="c2"
        >
          ⇠ Admin
        </span>
      </div>
    </div>
    <div
      class="c0"
    >
      <h1
        class="c3 c4"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div
    class="c5"
  >
    <button
      class="c6 outer"
      type="button"
    >
      <span
        class="c7"
      >
        Reload users
      </span>
    </button>
    <button
      class="c6 outer"
      type="button"
    >
      <span
        class="c7"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="c8"
  >
    <div
      class="c9"
    >
      <div
        class="c10"
      >
        <div
          class="c11"
        >
          <div
            class="c12"
          />
          <div
            class=""
          >
            <div
              class="c13"
            >
              <div
                class="c14"
              >
                <h1
                  class="c15 c16"
                  id="new-+"
                >
                  New +
                </h1>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with initial state 1`] = `
.c1 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
  width: 8rem;
  height: 2.2rem;
  margin-top: 3.34rem;
}

.c3 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
}

.c2 {
  position: absolute;
  top: 0;
  width: 13rem;
  height: 100vh;
  background-image: linear-gradient( 90deg, rgb(238,238,238), rgb(245,245,245), rgb(238,238,238) );
  background-repeat: no-repeat;
  background-size: 12.5rem 100%;
  -webkit-animation: sjjMW 3.5s ease-in-out infinite;
  animation: sjjMW 3.5s ease-in-out infinite;
}

.c0 {
  display: block;
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  overflow: hidden;
  max-width: 60rem;
  padding-right: 1rem;
  padding-left: 1rem;
}

@media (prefers-color-scheme:dark) {
  .c1 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c3 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c2 {
    background-image: linear-gradient( 90deg, rgb(17,17,17), rgb(50,50,50), rgb(17,17,17) );
  }
}

@media (min-width:50.25rem) {
  .c0 {
    padding-right: 2rem;
    padding-left: 2rem;
  }
}

<div>
  <div
    aria-label="Loading"
    class="c0 page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="c3"
      style="margin-top: 1.2rem;"
    >
      <div
        class="c2"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="c3"
      style="margin-top: 1.2rem;"
    >
      <div
        class="c2"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="c3"
      style="margin-top: 1.2rem;"
    >
      <div
        class="c2"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="c3"
      style="margin-top: 1.2rem;"
    >
      <div
        class="c2"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with loadError 1`] = `
.c3 {
  margin: 0;
  font-size: 2.4rem;
  font-weight: bold;
}

.c17 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c2 {
  margin: 0;
}

.c4 {
  margin: 2.3rem 0 0 0;
  margin-top: 1.5rem;
}

.c1 {
  margin: 1.5rem 0 0 0;
}

.c0 {
  -webkit-animation: bbwGtI 0.4s ease-in-out;
  animation: bbwGtI 0.4s ease-in-out;
}

.c16 {
  width: 100%;
  color: #1e1e1e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c18 {
  margin: 0;
}

.c6 {
  position: relative;
  min-width: 5rem;
  padding: 0.43rem 1.125rem 0.32rem 1.125rem;
  -webkit-transition: filter 0.3s;
  transition: filter 0.3s;
  border: none;
  border-radius: 0.25rem;
  font-size: 1.4rem;
  font-weight: bold;
  cursor: pointer;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #0067B7;
  color: white;
}

.c6:focus-within,
.c6:focus {
  outline: none !important;
}

.c6:focus-within::after,
.c6:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid rgba(0,125,250,0.6) 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c6:focus,
.c6:hover {
  background-color: #004F8C;
  color: white;
}

.c6:active {
  background-color: #003E6F;
}

.c6:disabled {
  background-color: #cdcdd7;
  color: rgb(100,100,100);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  width: 100%;
  min-width: unset;
  max-width: unset;
  padding: 0;
  height: 100%;
  overflow: scroll;
}

.c13 {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 0.35rem;
  overflow: hidden;
}

.c14 {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: calc(100% + 2rem);
  height: calc(100% + 2rem);
  margin-top: -1rem;
  margin-left: -1rem;
  background-color: white;
  background-position: center;
  background-size: cover;
}

.c15 {
  padding: 1.2rem 0.8rem 0.8rem 1.2rem;
}

.c8 {
  display: inline-block;
  margin-bottom: 0;
  padding-bottom: 0;
  line-height: 1.5;
  margin-top: 2rem;
}

.c8:first-of-type {
  margin-top: 0.86rem;
}

.c9 {
  color: #E02626;
  fill: #E02626;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c12 > *:not(:first-child) {
  margin-top: 1rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c5 > *:not(:first-child) {
  margin-left: 1rem;
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {
  .c16 {
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:focus-within::after,
  .c6:focus::after {
    border-color: rgba(0,125,250,0.6);
  }
}

@media (prefers-color-scheme:dark) {
  .c6 {
    background-color: #025CA2;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:focus,
  .c6:hover {
    background-color: #004479;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:active {
    background-color: #003965;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:disabled {
    background-color: rgb(89,89,89);
    color: darkgray;
  }
}

@media (min-width:50.25rem) {
  .c11 {
    width: 30%;
    min-width: 20rem;
    max-width: 40rem;
    padding: 2rem 1rem 2rem 0;
  }
}

@media (prefers-color-scheme:dark) {
  .c14 {
    background-color: #1e1e1e;
  }
}

@media (prefers-color-scheme:dark) {
  .c9 {
    color: #CA2020;
    fill: #CA2020;
  }
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

<div>
  <div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <span
          class="c2"
        >
          ⇠ Admin
        </span>
      </div>
    </div>
    <div
      class="c0"
    >
      <h1
        class="c3 c4"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div
    class="c5"
  >
    <button
      class="c6 outer"
      type="button"
    >
      <span
        class="c7"
      >
        Reload users
      </span>
    </button>
    <button
      class="c6 outer"
      type="button"
    >
      <span
        class="c7"
      >
        Show filters
      </span>
    </button>
  </div>
  <span
    class="c8"
  >
    <span
      class="c9"
    >
      Could not load users
      <br />
      Something went wrong
    </span>
  </span>
  <div
    class="c10"
  >
    <div
      class="c11"
    >
      <div
        class="c12"
      >
        <div
          class="c13"
        >
          <div
            class="c14"
          />
          <div
            class=""
          >
            <div
              class="c15"
            >
              <div
                class="c16"
              >
                <h1
                  class="c17 c18"
                  id="new-+"
                >
                  New +
                </h1>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with loading=true 1`] = `
.c3 {
  margin: 0;
  font-size: 2.4rem;
  font-weight: bold;
}

.c27 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c2 {
  margin: 0;
}

.c4 {
  margin: 2.3rem 0 0 0;
  margin-top: 1.5rem;
}

.c1 {
  margin: 1.5rem 0 0 0;
}

.c0 {
  -webkit-animation: bbwGtI 0.4s ease-in-out;
  animation: bbwGtI 0.4s ease-in-out;
}

.c26 {
  width: 100%;
  color: #1e1e1e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c28 {
  margin: 0;
}

.c9 {
  position: relative;
  display: inline-block;
  width: 1.125rem;
  height: 1.125rem;
  color: #1e1e1e;
}

.c10 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation-delay: -0.15000000000000002s;
  animation-delay: -0.15000000000000002s;
}

.c11 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  -webkit-animation-delay: -0.05000000000000002s;
  animation-delay: -0.05000000000000002s;
}

.c12 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
  -webkit-animation-delay: 0.04999999999999999s;
  animation-delay: 0.04999999999999999s;
}

.c13 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(135deg);
  -ms-transform: rotate(135deg);
  transform: rotate(135deg);
  -webkit-animation-delay: 0.15000000000000002s;
  animation-delay: 0.15000000000000002s;
}

.c14 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  -webkit-animation-delay: 0.25s;
  animation-delay: 0.25s;
}

.c15 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(225deg);
  -ms-transform: rotate(225deg);
  transform: rotate(225deg);
  -webkit-animation-delay: 0.35s;
  animation-delay: 0.35s;
}

.c16 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(270deg);
  -ms-transform: rotate(270deg);
  transform: rotate(270deg);
  -webkit-animation-delay: 0.45000000000000007s;
  animation-delay: 0.45000000000000007s;
}

.c17 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(315deg);
  -ms-transform: rotate(315deg);
  transform: rotate(315deg);
  -webkit-animation-delay: 0.55s;
  animation-delay: 0.55s;
}

.c6 {
  position: relative;
  min-width: 5rem;
  padding: 0.43rem 1.125rem 0.32rem 1.125rem;
  -webkit-transition: filter 0.3s;
  transition: filter 0.3s;
  border: none;
  border-radius: 0.25rem;
  font-size: 1.4rem;
  font-weight: bold;
  cursor: pointer;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #0067B7;
  color: white;
  cursor: default;
}

.c6:focus-within,
.c6:focus {
  outline: none !important;
}

.c6:focus-within::after,
.c6:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid rgba(0,125,250,0.6) 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c6:focus,
.c6:hover {
  background-color: #004F8C;
  color: white;
}

.c6:active {
  background-color: #003E6F;
}

.c6:disabled {
  background-color: #cdcdd7;
  color: rgb(100,100,100);
}

.c18 {
  position: relative;
  min-width: 5rem;
  padding: 0.43rem 1.125rem 0.32rem 1.125rem;
  -webkit-transition: filter 0.3s;
  transition: filter 0.3s;
  border: none;
  border-radius: 0.25rem;
  font-size: 1.4rem;
  font-weight: bold;
  cursor: pointer;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #0067B7;
  color: white;
}

.c18:focus-within,
.c18:focus {
  outline: none !important;
}

.c18:focus-within::after,
.c18:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid rgba(0,125,250,0.6) 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c18:focus,
.c18:hover {
  background-color: #004F8C;
  color: white;
}

.c18:active {
  background-color: #003E6F;
}

.c18:disabled {
  background-color: #cdcdd7;
  color: rgb(100,100,100);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  opacity: 0.1;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c8 {
  position: absolute;
  top: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c21 {
  width: 100%;
  min-width: unset;
  max-width: unset;
  padding: 0;
  height: 100%;
  overflow: scroll;
}

.c23 {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 0.35rem;
  overflow: hidden;
}

.c24 {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: calc(100% + 2rem);
  height: calc(100% + 2rem);
  margin-top: -1rem;
  margin-left: -1rem;
  background-color: white;
  background-position: center;
  background-size: cover;
}

.c25 {
  padding: 1.2rem 0.8rem 0.8rem 1.2rem;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c22 > *:not(:first-child) {
  margin-top: 1rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c5 > *:not(:first-child) {
  margin-left: 1rem;
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {
  .c26 {
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c9 {
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:focus-within::after,
  .c6:focus::after {
    border-color: rgba(0,125,250,0.6);
  }
}

@media (prefers-color-scheme:dark) {
  .c6 {
    background-color: #025CA2;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:focus,
  .c6:hover {
    background-color: #004479;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:active {
    background-color: #003965;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:disabled {
    background-color: rgb(89,89,89);
    color: darkgray;
  }
}

@media (prefers-color-scheme:dark) {
  .c18:focus-within::after,
  .c18:focus::after {
    border-color: rgba(0,125,250,0.6);
  }
}

@media (prefers-color-scheme:dark) {
  .c18 {
    background-color: #025CA2;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c18:focus,
  .c18:hover {
    background-color: #004479;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c18:active {
    background-color: #003965;
  }
}

@media (prefers-color-scheme:dark) {
  .c18:disabled {
    background-color: rgb(89,89,89);
    color: darkgray;
  }
}

@media (min-width:50.25rem) {
  .c21 {
    width: 30%;
    min-width: 20rem;
    max-width: 40rem;
    padding: 2rem 1rem 2rem 0;
  }
}

@media (prefers-color-scheme:dark) {
  .c24 {
    background-color: #1e1e1e;
  }
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

<div>
  <div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <span
          class="c2"
        >
          ⇠ Admin
        </span>
      </div>
    </div>
    <div
      class="c0"
    >
      <h1
        class="c3 c4"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div
    class="c5"
  >
    <button
      class="c6 outer"
      disabled=""
      type="button"
    >
      <span
        class="c7"
      >
        Reload users
      </span>
      <div
        aria-hidden="true"
        class="c8"
      >
        <div
          class="c9"
        >
          <div
            class="c10"
          />
          <div
            class="c11"
          />
          <div
            class="c12"
          />
          <div
            class="c13"
          />
          <div
            class="c14"
          />
          <div
            class="c15"
          />
          <div
            class="c16"
          />
          <div
            class="c17"
          />
        </div>
      </div>
    </button>
    <button
      class="c18 outer"
      type="button"
    >
      <span
        class="c19"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="c20"
  >
    <div
      class="c21"
    >
      <div
        class="c22"
      >
        <div
          class="c23"
        >
          <div
            class="c24"
          />
          <div
            class=""
          >
            <div
              class="c25"
            >
              <div
                class="c26"
              >
                <h1
                  class="c27 c28"
                  id="new-+"
                >
                  New +
                </h1>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with removeError 1`] = `
.c3 {
  margin: 0;
  font-size: 2.4rem;
  font-weight: bold;
}

.c15 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c2 {
  margin: 0;
}

.c4 {
  margin: 2.3rem 0 0 0;
  margin-top: 1.5rem;
}

.c1 {
  margin: 1.5rem 0 0 0;
}

.c0 {
  -webkit-animation: bbwGtI 0.4s ease-in-out;
  animation: bbwGtI 0.4s ease-in-out;
}

.c14 {
  width: 100%;
  color: #1e1e1e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c16 {
  margin: 0;
}

.c6 {
  position: relative;
  min-width: 5rem;
  padding: 0.43rem 1.125rem 0.32rem 1.125rem;
  -webkit-transition: filter 0.3s;
  transition: filter 0.3s;
  border: none;
  border-radius: 0.25rem;
  font-size: 1.4rem;
  font-weight: bold;
  cursor: pointer;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #0067B7;
  color: white;
}

.c6:focus-within,
.c6:focus {
  outline: none !important;
}

.c6:focus-within::after,
.c6:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid rgba(0,125,250,0.6) 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c6:focus,
.c6:hover {
  background-color: #004F8C;
  color: white;
}

.c6:active {
  background-color: #003E6F;
}

.c6:disabled {
  background-color: #cdcdd7;
  color: rgb(100,100,100);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 {
  width: 100%;
  min-width: unset;
  max-width: unset;
  padding: 0;
  height: 100%;
  overflow: scroll;
}

.c11 {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 0.35rem;
  overflow: hidden;
}

.c12 {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: calc(100% + 2rem);
  height: calc(100% + 2rem);
  margin-top: -1rem;
  margin-left: -1rem;
  background-color: white;
  background-position: center;
  background-size: cover;
}

.c13 {
  padding: 1.2rem 0.8rem 0.8rem 1.2rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c10 > *:not(:first-child) {
  margin-top: 1rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c5 > *:not(:first-child) {
  margin-left: 1rem;
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {
  .c14 {
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:focus-within::after,
  .c6:focus::after {
    border-color: rgba(0,125,250,0.6);
  }
}

@media (prefers-color-scheme:dark) {
  .c6 {
    background-color: #025CA2;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:focus,
  .c6:hover {
    background-color: #004479;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:active {
    background-color: #003965;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:disabled {
    background-color: rgb(89,89,89);
    color: darkgray;
  }
}

@media (min-width:50.25rem) {
  .c9 {
    width: 30%;
    min-width: 20rem;
    max-width: 40rem;
    padding: 2rem 1rem 2rem 0;
  }
}

@media (prefers-color-scheme:dark) {
  .c12 {
    background-color: #1e1e1e;
  }
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

<div>
  <div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <span
          class="c2"
        >
          ⇠ Admin
        </span>
      </div>
    </div>
    <div
      class="c0"
    >
      <h1
        class="c3 c4"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div
    class="c5"
  >
    <button
      class="c6 outer"
      type="button"
    >
      <span
        class="c7"
      >
        Reload users
      </span>
    </button>
    <button
      class="c6 outer"
      type="button"
    >
      <span
        class="c7"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="c8"
  >
    <div
      class="c9"
    >
      <div
        class="c10"
      >
        <div
          class="c11"
        >
          <div
            class="c12"
          />
          <div
            class=""
          >
            <div
              class="c13"
            >
              <div
                class="c14"
              >
                <h1
                  class="c15 c16"
                  id="new-+"
                >
                  New +
                </h1>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with removing=true 1`] = `
.c3 {
  margin: 0;
  font-size: 2.4rem;
  font-weight: bold;
}

.c15 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c2 {
  margin: 0;
}

.c4 {
  margin: 2.3rem 0 0 0;
  margin-top: 1.5rem;
}

.c1 {
  margin: 1.5rem 0 0 0;
}

.c0 {
  -webkit-animation: bbwGtI 0.4s ease-in-out;
  animation: bbwGtI 0.4s ease-in-out;
}

.c14 {
  width: 100%;
  color: #1e1e1e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c16 {
  margin: 0;
}

.c6 {
  position: relative;
  min-width: 5rem;
  padding: 0.43rem 1.125rem 0.32rem 1.125rem;
  -webkit-transition: filter 0.3s;
  transition: filter 0.3s;
  border: none;
  border-radius: 0.25rem;
  font-size: 1.4rem;
  font-weight: bold;
  cursor: pointer;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #0067B7;
  color: white;
}

.c6:focus-within,
.c6:focus {
  outline: none !important;
}

.c6:focus-within::after,
.c6:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid rgba(0,125,250,0.6) 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c6:focus,
.c6:hover {
  background-color: #004F8C;
  color: white;
}

.c6:active {
  background-color: #003E6F;
}

.c6:disabled {
  background-color: #cdcdd7;
  color: rgb(100,100,100);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 {
  width: 100%;
  min-width: unset;
  max-width: unset;
  padding: 0;
  height: 100%;
  overflow: scroll;
}

.c11 {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 0.35rem;
  overflow: hidden;
}

.c12 {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: calc(100% + 2rem);
  height: calc(100% + 2rem);
  margin-top: -1rem;
  margin-left: -1rem;
  background-color: white;
  background-position: center;
  background-size: cover;
}

.c13 {
  padding: 1.2rem 0.8rem 0.8rem 1.2rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c10 > *:not(:first-child) {
  margin-top: 1rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c5 > *:not(:first-child) {
  margin-left: 1rem;
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {
  .c14 {
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:focus-within::after,
  .c6:focus::after {
    border-color: rgba(0,125,250,0.6);
  }
}

@media (prefers-color-scheme:dark) {
  .c6 {
    background-color: #025CA2;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:focus,
  .c6:hover {
    background-color: #004479;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:active {
    background-color: #003965;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:disabled {
    background-color: rgb(89,89,89);
    color: darkgray;
  }
}

@media (min-width:50.25rem) {
  .c9 {
    width: 30%;
    min-width: 20rem;
    max-width: 40rem;
    padding: 2rem 1rem 2rem 0;
  }
}

@media (prefers-color-scheme:dark) {
  .c12 {
    background-color: #1e1e1e;
  }
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

<div>
  <div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <span
          class="c2"
        >
          ⇠ Admin
        </span>
      </div>
    </div>
    <div
      class="c0"
    >
      <h1
        class="c3 c4"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div
    class="c5"
  >
    <button
      class="c6 outer"
      type="button"
    >
      <span
        class="c7"
      >
        Reload users
      </span>
    </button>
    <button
      class="c6 outer"
      type="button"
    >
      <span
        class="c7"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="c8"
  >
    <div
      class="c9"
    >
      <div
        class="c10"
      >
        <div
          class="c11"
        >
          <div
            class="c12"
          />
          <div
            class=""
          >
            <div
              class="c13"
            >
              <div
                class="c14"
              >
                <h1
                  class="c15 c16"
                  id="new-+"
                >
                  New +
                </h1>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with requestError 1`] = `
.c3 {
  margin: 0;
  font-size: 2.4rem;
  font-weight: bold;
}

.c15 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c2 {
  margin: 0;
}

.c4 {
  margin: 2.3rem 0 0 0;
  margin-top: 1.5rem;
}

.c1 {
  margin: 1.5rem 0 0 0;
}

.c0 {
  -webkit-animation: bbwGtI 0.4s ease-in-out;
  animation: bbwGtI 0.4s ease-in-out;
}

.c14 {
  width: 100%;
  color: #1e1e1e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c16 {
  margin: 0;
}

.c6 {
  position: relative;
  min-width: 5rem;
  padding: 0.43rem 1.125rem 0.32rem 1.125rem;
  -webkit-transition: filter 0.3s;
  transition: filter 0.3s;
  border: none;
  border-radius: 0.25rem;
  font-size: 1.4rem;
  font-weight: bold;
  cursor: pointer;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #0067B7;
  color: white;
}

.c6:focus-within,
.c6:focus {
  outline: none !important;
}

.c6:focus-within::after,
.c6:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid rgba(0,125,250,0.6) 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c6:focus,
.c6:hover {
  background-color: #004F8C;
  color: white;
}

.c6:active {
  background-color: #003E6F;
}

.c6:disabled {
  background-color: #cdcdd7;
  color: rgb(100,100,100);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 {
  width: 100%;
  min-width: unset;
  max-width: unset;
  padding: 0;
  height: 100%;
  overflow: scroll;
}

.c11 {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 0.35rem;
  overflow: hidden;
}

.c12 {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: calc(100% + 2rem);
  height: calc(100% + 2rem);
  margin-top: -1rem;
  margin-left: -1rem;
  background-color: white;
  background-position: center;
  background-size: cover;
}

.c13 {
  padding: 1.2rem 0.8rem 0.8rem 1.2rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c10 > *:not(:first-child) {
  margin-top: 1rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c5 > *:not(:first-child) {
  margin-left: 1rem;
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {
  .c14 {
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:focus-within::after,
  .c6:focus::after {
    border-color: rgba(0,125,250,0.6);
  }
}

@media (prefers-color-scheme:dark) {
  .c6 {
    background-color: #025CA2;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:focus,
  .c6:hover {
    background-color: #004479;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:active {
    background-color: #003965;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:disabled {
    background-color: rgb(89,89,89);
    color: darkgray;
  }
}

@media (min-width:50.25rem) {
  .c9 {
    width: 30%;
    min-width: 20rem;
    max-width: 40rem;
    padding: 2rem 1rem 2rem 0;
  }
}

@media (prefers-color-scheme:dark) {
  .c12 {
    background-color: #1e1e1e;
  }
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

<div>
  <div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <span
          class="c2"
        >
          ⇠ Admin
        </span>
      </div>
    </div>
    <div
      class="c0"
    >
      <h1
        class="c3 c4"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div
    class="c5"
  >
    <button
      class="c6 outer"
      type="button"
    >
      <span
        class="c7"
      >
        Reload users
      </span>
    </button>
    <button
      class="c6 outer"
      type="button"
    >
      <span
        class="c7"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="c8"
  >
    <div
      class="c9"
    >
      <div
        class="c10"
      >
        <div
          class="c11"
        >
          <div
            class="c12"
          />
          <div
            class=""
          >
            <div
              class="c13"
            >
              <div
                class="c14"
              >
                <h1
                  class="c15 c16"
                  id="new-+"
                >
                  New +
                </h1>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with requesting=true 1`] = `
.c3 {
  margin: 0;
  font-size: 2.4rem;
  font-weight: bold;
}

.c15 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c2 {
  margin: 0;
}

.c4 {
  margin: 2.3rem 0 0 0;
  margin-top: 1.5rem;
}

.c1 {
  margin: 1.5rem 0 0 0;
}

.c0 {
  -webkit-animation: bbwGtI 0.4s ease-in-out;
  animation: bbwGtI 0.4s ease-in-out;
}

.c14 {
  width: 100%;
  color: #1e1e1e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c16 {
  margin: 0;
}

.c6 {
  position: relative;
  min-width: 5rem;
  padding: 0.43rem 1.125rem 0.32rem 1.125rem;
  -webkit-transition: filter 0.3s;
  transition: filter 0.3s;
  border: none;
  border-radius: 0.25rem;
  font-size: 1.4rem;
  font-weight: bold;
  cursor: pointer;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #0067B7;
  color: white;
}

.c6:focus-within,
.c6:focus {
  outline: none !important;
}

.c6:focus-within::after,
.c6:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid rgba(0,125,250,0.6) 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c6:focus,
.c6:hover {
  background-color: #004F8C;
  color: white;
}

.c6:active {
  background-color: #003E6F;
}

.c6:disabled {
  background-color: #cdcdd7;
  color: rgb(100,100,100);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 {
  width: 100%;
  min-width: unset;
  max-width: unset;
  padding: 0;
  height: 100%;
  overflow: scroll;
}

.c11 {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 0.35rem;
  overflow: hidden;
}

.c12 {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: calc(100% + 2rem);
  height: calc(100% + 2rem);
  margin-top: -1rem;
  margin-left: -1rem;
  background-color: white;
  background-position: center;
  background-size: cover;
}

.c13 {
  padding: 1.2rem 0.8rem 0.8rem 1.2rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c10 > *:not(:first-child) {
  margin-top: 1rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c5 > *:not(:first-child) {
  margin-left: 1rem;
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {
  .c14 {
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:focus-within::after,
  .c6:focus::after {
    border-color: rgba(0,125,250,0.6);
  }
}

@media (prefers-color-scheme:dark) {
  .c6 {
    background-color: #025CA2;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:focus,
  .c6:hover {
    background-color: #004479;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:active {
    background-color: #003965;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:disabled {
    background-color: rgb(89,89,89);
    color: darkgray;
  }
}

@media (min-width:50.25rem) {
  .c9 {
    width: 30%;
    min-width: 20rem;
    max-width: 40rem;
    padding: 2rem 1rem 2rem 0;
  }
}

@media (prefers-color-scheme:dark) {
  .c12 {
    background-color: #1e1e1e;
  }
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

<div>
  <div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <span
          class="c2"
        >
          ⇠ Admin
        </span>
      </div>
    </div>
    <div
      class="c0"
    >
      <h1
        class="c3 c4"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div
    class="c5"
  >
    <button
      class="c6 outer"
      type="button"
    >
      <span
        class="c7"
      >
        Reload users
      </span>
    </button>
    <button
      class="c6 outer"
      type="button"
    >
      <span
        class="c7"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="c8"
  >
    <div
      class="c9"
    >
      <div
        class="c10"
      >
        <div
          class="c11"
        >
          <div
            class="c12"
          />
          <div
            class=""
          >
            <div
              class="c13"
            >
              <div
                class="c14"
              >
                <h1
                  class="c15 c16"
                  id="new-+"
                >
                  New +
                </h1>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with updateError 1`] = `
.c3 {
  margin: 0;
  font-size: 2.4rem;
  font-weight: bold;
}

.c15 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c2 {
  margin: 0;
}

.c4 {
  margin: 2.3rem 0 0 0;
  margin-top: 1.5rem;
}

.c1 {
  margin: 1.5rem 0 0 0;
}

.c0 {
  -webkit-animation: bbwGtI 0.4s ease-in-out;
  animation: bbwGtI 0.4s ease-in-out;
}

.c14 {
  width: 100%;
  color: #1e1e1e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c16 {
  margin: 0;
}

.c6 {
  position: relative;
  min-width: 5rem;
  padding: 0.43rem 1.125rem 0.32rem 1.125rem;
  -webkit-transition: filter 0.3s;
  transition: filter 0.3s;
  border: none;
  border-radius: 0.25rem;
  font-size: 1.4rem;
  font-weight: bold;
  cursor: pointer;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #0067B7;
  color: white;
}

.c6:focus-within,
.c6:focus {
  outline: none !important;
}

.c6:focus-within::after,
.c6:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid rgba(0,125,250,0.6) 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c6:focus,
.c6:hover {
  background-color: #004F8C;
  color: white;
}

.c6:active {
  background-color: #003E6F;
}

.c6:disabled {
  background-color: #cdcdd7;
  color: rgb(100,100,100);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 {
  width: 100%;
  min-width: unset;
  max-width: unset;
  padding: 0;
  height: 100%;
  overflow: scroll;
}

.c11 {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 0.35rem;
  overflow: hidden;
}

.c12 {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: calc(100% + 2rem);
  height: calc(100% + 2rem);
  margin-top: -1rem;
  margin-left: -1rem;
  background-color: white;
  background-position: center;
  background-size: cover;
}

.c13 {
  padding: 1.2rem 0.8rem 0.8rem 1.2rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c10 > *:not(:first-child) {
  margin-top: 1rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c5 > *:not(:first-child) {
  margin-left: 1rem;
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {
  .c14 {
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:focus-within::after,
  .c6:focus::after {
    border-color: rgba(0,125,250,0.6);
  }
}

@media (prefers-color-scheme:dark) {
  .c6 {
    background-color: #025CA2;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:focus,
  .c6:hover {
    background-color: #004479;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:active {
    background-color: #003965;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:disabled {
    background-color: rgb(89,89,89);
    color: darkgray;
  }
}

@media (min-width:50.25rem) {
  .c9 {
    width: 30%;
    min-width: 20rem;
    max-width: 40rem;
    padding: 2rem 1rem 2rem 0;
  }
}

@media (prefers-color-scheme:dark) {
  .c12 {
    background-color: #1e1e1e;
  }
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

<div>
  <div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <span
          class="c2"
        >
          ⇠ Admin
        </span>
      </div>
    </div>
    <div
      class="c0"
    >
      <h1
        class="c3 c4"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div
    class="c5"
  >
    <button
      class="c6 outer"
      type="button"
    >
      <span
        class="c7"
      >
        Reload users
      </span>
    </button>
    <button
      class="c6 outer"
      type="button"
    >
      <span
        class="c7"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="c8"
  >
    <div
      class="c9"
    >
      <div
        class="c10"
      >
        <div
          class="c11"
        >
          <div
            class="c12"
          />
          <div
            class=""
          >
            <div
              class="c13"
            >
              <div
                class="c14"
              >
                <h1
                  class="c15 c16"
                  id="new-+"
                >
                  New +
                </h1>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with updating=true 1`] = `
.c3 {
  margin: 0;
  font-size: 2.4rem;
  font-weight: bold;
}

.c15 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c2 {
  margin: 0;
}

.c4 {
  margin: 2.3rem 0 0 0;
  margin-top: 1.5rem;
}

.c1 {
  margin: 1.5rem 0 0 0;
}

.c0 {
  -webkit-animation: bbwGtI 0.4s ease-in-out;
  animation: bbwGtI 0.4s ease-in-out;
}

.c14 {
  width: 100%;
  color: #1e1e1e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c16 {
  margin: 0;
}

.c6 {
  position: relative;
  min-width: 5rem;
  padding: 0.43rem 1.125rem 0.32rem 1.125rem;
  -webkit-transition: filter 0.3s;
  transition: filter 0.3s;
  border: none;
  border-radius: 0.25rem;
  font-size: 1.4rem;
  font-weight: bold;
  cursor: pointer;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #0067B7;
  color: white;
}

.c6:focus-within,
.c6:focus {
  outline: none !important;
}

.c6:focus-within::after,
.c6:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid rgba(0,125,250,0.6) 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c6:focus,
.c6:hover {
  background-color: #004F8C;
  color: white;
}

.c6:active {
  background-color: #003E6F;
}

.c6:disabled {
  background-color: #cdcdd7;
  color: rgb(100,100,100);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 {
  width: 100%;
  min-width: unset;
  max-width: unset;
  padding: 0;
  height: 100%;
  overflow: scroll;
}

.c11 {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 0.35rem;
  overflow: hidden;
}

.c12 {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: calc(100% + 2rem);
  height: calc(100% + 2rem);
  margin-top: -1rem;
  margin-left: -1rem;
  background-color: white;
  background-position: center;
  background-size: cover;
}

.c13 {
  padding: 1.2rem 0.8rem 0.8rem 1.2rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c10 > *:not(:first-child) {
  margin-top: 1rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c5 > *:not(:first-child) {
  margin-left: 1rem;
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {
  .c14 {
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:focus-within::after,
  .c6:focus::after {
    border-color: rgba(0,125,250,0.6);
  }
}

@media (prefers-color-scheme:dark) {
  .c6 {
    background-color: #025CA2;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:focus,
  .c6:hover {
    background-color: #004479;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:active {
    background-color: #003965;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:disabled {
    background-color: rgb(89,89,89);
    color: darkgray;
  }
}

@media (min-width:50.25rem) {
  .c9 {
    width: 30%;
    min-width: 20rem;
    max-width: 40rem;
    padding: 2rem 1rem 2rem 0;
  }
}

@media (prefers-color-scheme:dark) {
  .c12 {
    background-color: #1e1e1e;
  }
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

<div>
  <div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <span
          class="c2"
        >
          ⇠ Admin
        </span>
      </div>
    </div>
    <div
      class="c0"
    >
      <h1
        class="c3 c4"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div
    class="c5"
  >
    <button
      class="c6 outer"
      type="button"
    >
      <span
        class="c7"
      >
        Reload users
      </span>
    </button>
    <button
      class="c6 outer"
      type="button"
    >
      <span
        class="c7"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="c8"
  >
    <div
      class="c9"
    >
      <div
        class="c10"
      >
        <div
          class="c11"
        >
          <div
            class="c12"
          />
          <div
            class=""
          >
            <div
              class="c13"
            >
              <div
                class="c14"
              >
                <h1
                  class="c15 c16"
                  id="new-+"
                >
                  New +
                </h1>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with user 1`] = `
.c1 {
  margin: 0;
  font-size: 2.2rem;
  font-weight: bold;
}

.c4 {
  margin: 0;
}

.c0 {
  width: 100%;
  color: #1e1e1e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 {
  margin: 3.34rem 0 0 0;
}

.c3 {
  display: inline-block;
  margin-bottom: 0;
  padding-bottom: 0;
  line-height: 1.5;
  margin-top: 2rem;
}

.c3:first-of-type {
  margin-top: 0.86rem;
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {
  .c0 {
    color: white;
  }
}

<div>
  <div
    class="c0"
  >
    <h1
      class="c1 c2"
      id="admin-only"
    >
      Admin only
    </h1>
    <span
      class="c3"
    >
      You need to be logged in with an admin account to view this content.
      <br />
      <span
        class="c4"
      >
        Got a different admin account? Log in here.
      </span>
    </span>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with users 1`] = `
.c3 {
  margin: 0;
  font-size: 2.4rem;
  font-weight: bold;
}

.c17 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c2 {
  margin: 0;
}

.c4 {
  margin: 2.3rem 0 0 0;
  margin-top: 1.5rem;
}

.c1 {
  margin: 1.5rem 0 0 0;
}

.c0 {
  -webkit-animation: bbwGtI 0.4s ease-in-out;
  animation: bbwGtI 0.4s ease-in-out;
}

.c16 {
  width: 100%;
  color: #1e1e1e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c18 {
  margin: 0;
}

.c6 {
  position: relative;
  min-width: 5rem;
  padding: 0.43rem 1.125rem 0.32rem 1.125rem;
  -webkit-transition: filter 0.3s;
  transition: filter 0.3s;
  border: none;
  border-radius: 0.25rem;
  font-size: 1.4rem;
  font-weight: bold;
  cursor: pointer;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #0067B7;
  color: white;
}

.c6:focus-within,
.c6:focus {
  outline: none !important;
}

.c6:focus-within::after,
.c6:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid rgba(0,125,250,0.6) 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c6:focus,
.c6:hover {
  background-color: #004F8C;
  color: white;
}

.c6:active {
  background-color: #003E6F;
}

.c6:disabled {
  background-color: #cdcdd7;
  color: rgb(100,100,100);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  width: 100%;
  min-width: unset;
  max-width: unset;
  padding: 0;
  height: 100%;
  overflow: scroll;
}

.c13 {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 0.35rem;
  overflow: hidden;
}

.c14 {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: calc(100% + 2rem);
  height: calc(100% + 2rem);
  margin-top: -1rem;
  margin-left: -1rem;
  background-color: white;
  background-position: center;
  background-size: cover;
}

.c15 {
  padding: 1.2rem 0.8rem 0.8rem 1.2rem;
}

.c8 {
  display: inline-block;
  margin-bottom: 0;
  padding-bottom: 0;
  line-height: 1.5;
  margin-top: 2rem;
}

.c8:first-of-type {
  margin-top: 0.86rem;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c12 > *:not(:first-child) {
  margin-top: 1rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c5 > *:not(:first-child) {
  margin-left: 1rem;
}

.c9 {
  display: inline-block;
  margin-bottom: 1rem;
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {
  .c16 {
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:focus-within::after,
  .c6:focus::after {
    border-color: rgba(0,125,250,0.6);
  }
}

@media (prefers-color-scheme:dark) {
  .c6 {
    background-color: #025CA2;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:focus,
  .c6:hover {
    background-color: #004479;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:active {
    background-color: #003965;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:disabled {
    background-color: rgb(89,89,89);
    color: darkgray;
  }
}

@media (min-width:50.25rem) {
  .c11 {
    width: 30%;
    min-width: 20rem;
    max-width: 40rem;
    padding: 2rem 1rem 2rem 0;
  }
}

@media (prefers-color-scheme:dark) {
  .c14 {
    background-color: #1e1e1e;
  }
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

<div>
  <div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <span
          class="c2"
        >
          ⇠ Admin
        </span>
      </div>
    </div>
    <div
      class="c0"
    >
      <h1
        class="c3 c4"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div
    class="c5"
  >
    <button
      class="c6 outer"
      type="button"
    >
      <span
        class="c7"
      >
        Reload users
      </span>
    </button>
    <button
      class="c6 outer"
      type="button"
    >
      <span
        class="c7"
      >
        Show filters
      </span>
    </button>
  </div>
  <span
    class="c8 c9"
  >
    Showing 
    3
     of 
    3
     users
  </span>
  <div
    class="c10"
  >
    <div
      class="c11"
    >
      <div
        class="c12"
      >
        <div
          class="c13"
        >
          <div
            class="c14"
          />
          <div
            class=""
          >
            <div
              class="c15"
            >
              <div
                class="c16"
              >
                <h1
                  class="c17 c18"
                  id="new-+"
                >
                  New +
                </h1>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c13"
        >
          <div
            class="c14"
          />
          <div
            class=""
          >
            <div
              class="c15"
            >
              <div
                class="c16"
              >
                <h1
                  class="c17 c18"
                  id="name"
                >
                  name
                </h1>
                <span
                  class="c8"
                >
                  <br />
                  id: 
                  1
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c13"
        >
          <div
            class="c14"
          />
          <div
            class=""
          >
            <div
              class="c15"
            >
              <div
                class="c16"
              >
                <h1
                  class="c17 c18"
                  id="another"
                >
                  another
                </h1>
                <span
                  class="c8"
                >
                  <br />
                  id: 
                  2
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c13"
        >
          <div
            class="c14"
          />
          <div
            class=""
          >
            <div
              class="c15"
            >
              <div
                class="c16"
              >
                <h1
                  class="c17 c18"
                  id="a-third"
                >
                  a third
                </h1>
                <span
                  class="c8"
                >
                  <br />
                  id: 
                  3
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
